--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-beautifulsoup4==4.7.1
+beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2019.3.9
-chardet==3.0.4
-Click==7.0
-Flask==1.0.3
-idna==2.8
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.2
+idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lxml==4.3.3
+Jinja2==2.11.2
+lxml==4.6.2
 MarkupSafe==1.1.1
-numpy==1.16.4
-pandas==0.24.2
-python-dateutil==2.8.0
-pytz==2019.1
-requests==2.22.0
-six==1.12.0
-soupsieve==1.9.1
-urllib3==1.25.3
-Werkzeug==0.15.4
+numpy==1.19.5
+pandas==1.2.0
+python-dateutil==2.8.1
+pytz==2020.5
+requests==2.25.1
+six==1.15.0
+soupsieve==2.1
+urllib3==1.26.2
+Werkzeug==1.0.1
